--- a/src/pages/Home/components/Testimonials/Testimonials.module.css
+++ b/src/pages/Home/components/Testimonials/Testimonials.module.css
@@ -49,10 +49,25 @@
     padding: 8px 20px;
     border-radius: 10px;
 }
-@media (max-width: 768px) {
+@media (max-width: 450px) {
     .testmonials{
         display: flex;
         flex-direction: column;
         width: 100%;
+    }
+}
+@media screen and (min-width: 770px){
+    .testmonials{
+        width: 100%;
+    }
+    .data{
+        display: flex;
+        justify-content: center;
+    }
+    .div1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
     }
 }
