--- a/src/pages/Home/components/Hero/Hero.module.css
+++ b/src/pages/Home/components/Hero/Hero.module.css
@@ -6,6 +6,7 @@
     padding: 20px;
     flex-wrap: wrap;
     gap: 20px;
+    margin: auto;
 }
 
 .sectionone {
@@ -17,22 +18,22 @@
     width: 100px;
     height: 100px;
     margin: 30px;
-    animation-name: ImageTransition;
+    /* animation-name: ImageTransition;
     animation-duration: 5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     position: relative;
-    transform-origin: center;
+    transform-origin: center; */
 }
 
-@keyframes ImageTransition {
+/* @keyframes ImageTransition {
     0%, 50%, 100% {
         transform: translateX(0) translateY(0);
     }
     25%, 75% {
         transform: translateX(-20px) translateY(-20px);
     }
-}
+} */
 
 .visible {
     opacity: 1;
@@ -74,17 +75,17 @@
     background-color: #fd6e94;
     transition: all 0.8s;
 }
-
+.sectiontwo img{
+    width: 400px;
+    height: 400px;
+}
 #first-image {
-    width: 600px;
-    height: 600px;
+    /* width: 300px; */
+    height: 300px;
     margin-top: 100px;
     margin-right: 20px;
 }
 
-/* ===============================
-    RESPONSIVE STYLES
-   =============================== */
 @media (max-width: 1024px) {
     #first-image {
         width: 400px;
